<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mgr.profiler.Welcome$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="5dp"
        android:layout_y="70dp"
        android:text="@string/select_function"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="165dp"
        android:layout_y="70dp"
        android:text="@string/interrupts_s"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radioGroupInterrupts"
        android:layout_width="100dp"
        android:layout_height="280dp"
        android:layout_x="165dp"
        android:layout_y="85dp" >

        <RadioButton
            android:id="@+id/radio_i10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/i_10" />

        <RadioButton
            android:id="@+id/radio_i100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/i_100" />

        <RadioButton
            android:id="@+id/radio_i500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_500" />

        <RadioButton
            android:id="@+id/radio_i1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_1000" />

        <RadioButton
            android:id="@+id/radio_i2000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_2000" />

        <RadioButton
            android:id="@+id/radio_i4000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_4000" />
    </RadioGroup>

    <EditText
        android:id="@+id/max"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_x="5dp"
        android:layout_y="25dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="5dp"
        android:layout_y="5dp"
        android:text="@string/number_of_requests"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radioGroupFunc"
        android:layout_width="120dp"
        android:layout_height="235dp"
        android:layout_x="5dp"
        android:layout_y="85dp" >

        <RadioButton
            android:id="@+id/radio_fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/func_a" />

        <RadioButton
            android:id="@+id/radio_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/func_b" />

        <RadioButton
            android:id="@+id/radio_fc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/func_c" />

        <RadioButton
            android:id="@+id/radio_fd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/func_d" />

        <RadioButton
            android:id="@+id/radio_fe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/func_e" />
    </RadioGroup>

    <Button
        android:id="@+id/btnWelcome"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_x="5dp"
        android:layout_y="340dp"
        android:text="@string/button_text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="5dp"
        android:layout_y="400dp"
        android:text="@string/hello_world" />

</AbsoluteLayout>